<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popular Movies</string>
    <string name="title_activity_details">Movie Details</string>
    <string name="title_activity_about">About</string>
    <string name="authority">com.timotiusoktorio.popularmovies</string>

    <!-- Action Bar Menus -->
    <string name="action_sort">Sort</string>
    <string name="action_about">About</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>

    <!-- Dialogs -->
    <string name="dialog_title_sort_picker">Sort by</string>

    <!-- Messages -->
    <string name="msg_network_unavailable">You are not connected to internet!</string>
    <string name="msg_saved_to_favorites">Successfully saved movie to favorites.</string>
    <string name="msg_removed_from_favorites">Successfully removed movie from favorites.</string>

    <!-- Preferences -->
    <string name="pref_key_sort_options">pref_key_sort_options</string>

    <!-- String Formats -->
    <string name="string_format_release_date">Release date: %s</string>
    <string name="string_format_rating">Rating: %.1f / 10</string>
    <string name="string_format_share_trailer">Check out the %1$s movie trailer: %2$s!</string>
    <string name="string_format_app_version">Version %s</string>

    <!-- UI: Image View -->
    <string name="image_view_cd_movie_poster">Movie Poster</string>
    <string name="image_view_cd_trailer_poster">Trailer Poster</string>
    <string name="image_view_cd_app_icon">Popular Movies App Icon</string>
    <string name="image_view_cd_tmdb_logo">TMDb logo</string>

    <!-- UI: Text View -->
    <string name="text_view_overview_label">Overview</string>
    <string name="text_view_trailers_label">Trailers</string>
    <string name="text_view_reviews_label">Reviews</string>
    <string name="text_view_app_author">by Timotius Oktorio</string>
    <string name="text_view_app_description">Popular Movies is a simple Android app that can help you discover popular or top rated movies.\n\nThis app uses the TMDb API but is not endorsed or certified by TMDb</string>

</resources>