<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/image_view_cd_app_icon"
            android:src="@drawable/ic_launcher_high_res"/>

        <TextView
            style="@style/LabelTextView"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_app_author"/>

        <TextView
            android:id="@+id/app_version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Version: 2.3.1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/text_view_app_description"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:contentDescription="@string/image_view_cd_tmdb_logo"
            android:src="@drawable/ic_tmdb_logo"/>

    </LinearLayout>

</ScrollView>